# opengl-renderer-3d

./: CMakeLists.txt  Main.cpp
headers/: EBO.h  VAO.h  VBO.h  camera.h  init.h  shader.h  texture.h
source/: EBO.cpp  VAO.cpp  VBO.cpp  camera.cpp  default.frag  default.vert  light.frag  light.vert  shader.cpp  texture.cpp
